# py-nuclear

./: .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/support/: changelog-ci-config.json
.github/workflows/: python-build.yml  python-changelog.yml  python-deploy.json  python-flake8.yml
docs/: README.md
nuclear/: __init__.py
nuke/: ez_write.py
nuke/placeholders/: classes.yaml  generate_classes_values.py
nuke/placeholders/_widgets/: exchange.py
python/: classes.py
python/nuke/: classes.py
resource/: write.nk
tests/: test_nuclear.py
