[project]
name = "nuclear"
version = "0.2.0-beta.13"
description = "Nuke wrapper module"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.6"
dependencies = [
    "pytest",
    "PySide2",
    "requests",
    "toml",
    "PyYAML",
]

[tool.setuptools.package-dir]
"wgid.nuke.nuclear" = "nuke"
"wgid.nuclear" = "python"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37, py38, py39

[testenv]
whitelist_externals = poetry
commands =
    pip install -U pip
    pip install . pytest
    pytest -s -rap .
"""